TestSuite/PascalABCTests/errors/err0221.pas
type TNode<T> = class;
TNode<T1> = class
a: T1;
end;
begin
  
end.